// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBarUnderlined should render correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 {
  background-color: inherit;
  border-color: transparent;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBarUnderlined>
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)>
          <Input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBarUnderlined>
</ThemeProvider>
`;

exports[`SearchBarUnderlined should render correctly with onChange 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 {
  background-color: inherit;
  border-color: transparent;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBarUnderlined
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)
          onChange={[MockFunction]}
        >
          <Input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                onChange={[MockFunction]}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBarUnderlined>
</ThemeProvider>
`;

exports[`SearchBarUnderlined should render correctly with onClick 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 {
  background-color: inherit;
  border-color: transparent;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBarUnderlined
    onClick={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)>
          <Input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              type="text"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                type="text"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              onClick={[MockFunction]}
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                onClick={[MockFunction]}
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  onClick={[MockFunction]}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    onClick={[MockFunction]}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      onClick={[MockFunction]}
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBarUnderlined>
</ThemeProvider>
`;

exports[`SearchBarUnderlined should render correctly with value 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c5 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 20px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c4 {
  color: #545456;
  cursor: pointer;
}

.c4:hover {
  color: #757679;
}

.c4::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #CCC;
  background-color: rgba(0,0,0,0);
}

.c1 {
  background-color: inherit;
  border-color: transparent;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 40px;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <SearchBarUnderlined
    onChange={[MockFunction]}
    value="My search"
  >
    <styled.div>
      <div
        className="c0"
      >
        <Styled(Input)
          onChange={[MockFunction]}
          value="My search"
        >
          <Input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            value="My search"
            width="100%"
          >
            <styled.input
              className="c1"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              value="My search"
              width="100%"
            >
              <input
                className="c1 c2"
                disabled={false}
                onChange={[MockFunction]}
                type="text"
                value="My search"
                width="100%"
              />
            </styled.input>
          </Input>
        </Styled(Input)>
        <styled.div>
          <div
            className="c3"
          >
            <Icon
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <Styled(Text)
                code="\\\\e92d"
                selectable={true}
                size="20px"
                weight={400}
              >
                <Text
                  capitalize={false}
                  className="c4"
                  code="\\\\e92d"
                  italic={false}
                  opacity={1}
                  selectable={true}
                  size="20px"
                  uppercase={false}
                  weight={400}
                >
                  <styled.span
                    capitalize={false}
                    className="c4"
                    code="\\\\e92d"
                    italic={false}
                    opacity={1}
                    selectable={true}
                    size="20px"
                    uppercase={false}
                    weight={400}
                  >
                    <span
                      className="c4 c5"
                      opacity={1}
                      size="20px"
                    />
                  </styled.span>
                </Text>
              </Styled(Text)>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBarUnderlined>
</ThemeProvider>
`;
